--- a/tecWeb/Frontend/src/app/pages/home/home.component.html
+++ b/tecWeb/Frontend/src/app/pages/home/home.component.html
@@ -5,9 +5,7 @@
       [style]="{ width: 'width' }"
       styleClass="styleClass"
     >
-      <div *ngFor="let i of lastSlaugther">
-        {{ i }}
-      </div>
+      <div *ngFor=""></div>
     </p-card>
   </div>
 
